@@ -420,6 +420,8 @@ because of Phabricator reports.
   not much benefit in customising the error message.
 * ContentHandler::getForTitle(), deprecated since 1.35, now emits
   deprecation warnings.
+* User::listOptionKinds(), deprecated since 1.35, now emits deprecation
+  warnings.
 * …
 
 === Other changes in 1.37 ===
